tests/regression/errors/basic/import_error_10.csd
// Import error test 10
yeet "nonexistent_module_10"
sus result drip = some_function(10)
